{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 130,
  "lineage": "be5a879f-c8aa-a5fb-e2d6-2380119d1907",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060a84cbcb5c14844",
            "arn": "arn:aws:ec2:us-east-2:233752784223:instance/i-0668922a9b0e784ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops_dev_EC2Profile",
            "id": "i-0668922a9b0e784ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_dev_ec2_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bd1a52b51a87d6f",
            "private_dns": "ip-10-0-1-200.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_dns": "ec2-3-136-26-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.26.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c8d3660bbd67bc1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0611e5220c04fad9f",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-web-server",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-web-server",
              "Project": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015b34c469a37cfdc"
            ]
          },
          "dependencies": [
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_key_pair.tls_private_key.ec2_key_pair",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_access_s3_role",
            "module.main.aws_subnet.public_a",
            "module.main.aws_vpc.main",
            "module.security_group.aws_security_group.ec2_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:internet-gateway/igw-0f1af9d394cc0ad50",
            "id": "igw-0f1af9d394cc0ad50",
            "owner_id": "233752784223",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-igw",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-igw",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:network-acl/acl-0f8063f2b8bf820a9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f8063f2b8bf820a9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "233752784223",
            "subnet_ids": [
              "subnet-0611e5220c04fad9f",
              "subnet-0622e96e33556c28a",
              "subnet-0a44918c490e5fe59",
              "subnet-0a57f9c97302a7895"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-acl",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-acl",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_efemeras",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-286444039",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8063f2b8bf820a9",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1655468710",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8063f2b8bf820a9",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4216198311",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8063f2b8bf820a9",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_response_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2736958822",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8063f2b8bf820a9",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-985713511",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8063f2b8bf820a9",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_a",
            "module.main.aws_subnet.private_b",
            "module.main.aws_subnet.public_a",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:route-table/rtb-078827ae0243ea8b0",
            "id": "rtb-078827ae0243ea8b0",
            "owner_id": "233752784223",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-private-rt",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-private-rt",
              "Project": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:route-table/rtb-0cddc56928aa6e427",
            "id": "rtb-0cddc56928aa6e427",
            "owner_id": "233752784223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1af9d394cc0ad50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-public-rt",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-public-rt",
              "Project": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbe0436800b79fe",
            "route_table_id": "rtb-078827ae0243ea8b0",
            "subnet_id": "subnet-0622e96e33556c28a"
          },
          "dependencies": [
            "module.main.aws_route_table.private_route",
            "module.main.aws_subnet.private_a",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781164c035b231c5",
            "route_table_id": "rtb-078827ae0243ea8b0",
            "subnet_id": "subnet-0a44918c490e5fe59"
          },
          "dependencies": [
            "module.main.aws_route_table.private_route",
            "module.main.aws_subnet.private_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04adac170aabbd32f",
            "route_table_id": "rtb-0cddc56928aa6e427",
            "subnet_id": "subnet-0611e5220c04fad9f"
          },
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_route_table.public_route",
            "module.main.aws_subnet.public_a",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09635c0a412def68d",
            "route_table_id": "rtb-0cddc56928aa6e427",
            "subnet_id": "subnet-0a57f9c97302a7895"
          },
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_route_table.public_route",
            "module.main.aws_subnet.public_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:subnet/subnet-0622e96e33556c28a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0622e96e33556c28a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233752784223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-private-subnet-us-east-2a",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-private-subnet-us-east-2a",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:subnet/subnet-0a44918c490e5fe59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44918c490e5fe59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233752784223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-private-subnet-us-east-2b",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-private-subnet-us-east-2b",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:subnet/subnet-0611e5220c04fad9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0611e5220c04fad9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233752784223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-public-subnet-us-east-2a",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-public-subnet-us-east-2a",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:subnet/subnet-0a57f9c97302a7895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a57f9c97302a7895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233752784223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-public-subnet-us-east-2b",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-public-subnet-us-east-2b",
              "Project": "devops"
            },
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:vpc/vpc-099e42c526e23c23f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6c05b2f6df503b7",
            "default_route_table_id": "rtb-0ca388dfcf1bddf34",
            "default_security_group_id": "sg-0169edf3f768ca1d0",
            "dhcp_options_id": "dopt-0d533706b1cfc2f35",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099e42c526e23c23f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca388dfcf1bddf34",
            "owner_id": "233752784223",
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-vpc",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-vpc",
              "Project": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:233752784223:security-group/sg-015b34c469a37cfdc",
            "description": "Grupo de seguranca para Servidor da Aplicacao",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " Libera todo trafego de saida para qualquer destino",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015b34c469a37cfdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera acesso HTTP de qualquer origem",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera acesso HTTPS de qualquer origem",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera acesso SSH com origem no meu IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Libera ICMP dentro da VPN",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "devops-dev-sg-web",
            "name_prefix": "",
            "owner_id": "233752784223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-dev-sg-web",
              "Project": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-dev-sg-web",
              "Project": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e42c526e23c23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}